# Simple-FAT16

./: CMakeLists.txt  README.md  file_reader.c  file_reader.h  main.c
